[workspace]
members = [
    "*/src/..",
]
# members = ["**/src/.."] # This also works (as an alternative), but it's very slow.
exclude = ["target"]

[patch.crates-io]
pebble-skip = { path = "pebble-skip" }
pebble-sys = { path = "pebble-sys" }

[profile.release]
codegen-units = 1
debug = true
opt-level = "s"
lto = "fat"

[profile.release.build-override]
#opt-level = 0

[profile.dev]
codegen-units = 1
opt-level = "s"
lto = "fat"

[profile.dev.package."*"]
