[package]
name = "pebble-test"
version = "0.1.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

autotests = false
autobenches = false
autoexamples = false

[profile.release]
debug = true
opt-level = "s"

[profile.dev.package.pebble-sys]
opt-level = 0

[profile.dev.package.pebble]
opt-level = 0

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"

[lib]
name = "pebble_test"
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
debugless-unwrap = "0.0.4"
pebble = { path = "../pebble" }
