[package]
name = "pebble-test"
version = "0.1.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

autotests = false
autobenches = false
autoexamples = false

[profile.release]
debug = true
opt-level = "s"
lto = "fat"

[profile.dev]
codegen-units = 1
opt-level = "s"
lto = "fat"

[profile.dev.package."*"]

[lib]
name = "pebble_test"
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
debugless-unwrap = "0.0.4"
pebble = { path = "../pebble" }
