[package]
name = "pebble-test"
version = "0.0.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

autotests = false
autobenches = false
autoexamples = false

[lib]
name = "pebble_test"
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
debugless-unwrap = "0.0.4"
pebble-skip = { path = "../pebble-skip" }
